fixed social icons to align horizontally,finished footer styling

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -506,6 +506,7 @@ input[type=checkbox] {
 footer {
 background-color: #333;
     padding: 50px;
+    font-size: 80%;
 }
 
 .footer-nav {
@@ -517,9 +518,11 @@ background-color: #333;
     float: right;
 }
 .footer-nav li,
-.social-links {
+.social-links li{
     display: inline-block;
-    margin-right: 20px;
+    margin-top: 20px;
+    padding: 0 10px;
+    
 }
 .footer-nav li:last-child,
 .social-links:last-child{
@@ -542,16 +545,29 @@ background-color: #333;
     }
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 180%;
+    font-size: 160%;
 }
-
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+    transition: color 0.2s;
+}
 .ion-social-facebook:hover {
     color: #3b5998;
+    
+}.ion-social-twitter:hover {
+    color: #00aced;
+    
+}.ion-social-googleplus:hover {
+    color: #dd4b39;
+    
+}.ion-social-instagram:hover {
+    color: #517fa4;
     
 }
 .footer p{
     color: #888;
     text-align: center;
-    font-size: 90%;
     margin-top: 30px;
 }
